--- a/src/PMT/WebBundle/Resources/translations/PMTWebBundle.en.yml
+++ b/src/PMT/WebBundle/Resources/translations/PMTWebBundle.en.yml
@@ -1,3 +1,11 @@
+# Dashboard
+dashboard:
+    dashboard: Dashboard
+
+# Activity stream
+activity:
+    activity_stream: Activity stream
+
 # Issue
 issue:
     issues: Issues
@@ -14,7 +22,6 @@ issue:
     description: Description
     subtasks: Sub-tasks
     comments: Comments
-    activity: Activity
     actions: Actions
     people: People
     creator: Creator
@@ -28,12 +35,35 @@ issue:
     meta: Meta
     nomilestonefound: No milestone found
     project: Project
+    assigned_to_me: Assigned to me
+    issues_in_progress: In progress
     form:
         create: Create issue
         cancel: Cancel
         newissue: New issue
     navigator:
         search: Search
+        owner: Owner
     link:
         create: Create issue
 
+# Project
+project:
+    projects: Projects
+    roadmap: Road map
+    agile: Agile
+    people: People
+    link:
+        create: Create project
+
+# Mileston
+milestone:
+    milestones: Milestones
+
+# User
+user:
+    contact_details: Contact details
+    link:
+        profile: Profile
+        logout: Logout
+        preferences: Preferences
