Add missing translation

--- a/src/PMT/WebBundle/Resources/translations/PMTWebBundle.en.yml
+++ b/src/PMT/WebBundle/Resources/translations/PMTWebBundle.en.yml
@@ -50,6 +50,7 @@ issue:
 # Project
 project:
     projects: Projects
+    summary: Summary
     roadmap: Road map
     agile: Agile
     people: People
