--- a/src/PMT/WebBundle/Resources/translations/PMTWebBundle.en.yml
+++ b/src/PMT/WebBundle/Resources/translations/PMTWebBundle.en.yml
@@ -56,6 +56,8 @@ project:
     people: People
     link:
         create: Create project
+    form:
+        new: New project
 
 # Mileston
 milestone:
